--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=SpringBootDeployment
+
+#Database Setting
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=HhcUMsZLcniVBfZOnXAepLsAwfIRPBaM
+spring.datasource.url=jdbc:mysql://root:HhcUMsZLcniVBfZOnXAepLsAwfIRPBaM@metro.proxy.rlwy.net:55086/railway?createDatabaseIfNotExist=true
+sprig.datasource.hikari.maximum-pool-size=10
+
+
+#JPA Settings
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=create
